--- a/config/production.env
+++ b/config/production.env
@@ -1,2 +1,2 @@
 MONGOURL=mongodb+srv://activity:activityTracker@activity.4th9m.mongodb.net/activity
-HOST=localhost
+HOST=gala-staging-backend.herokuapp.com
